fixed annotation tool

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <button id="play-pause-btn" class="control-btn" title="Play/Pause (Space)">
                             <span id="play-icon">▶</span>
                         </button>
-                        <button id="frame-back-btn" class="control-btn small" title="Previous Frame (←)">⏮</button>
-                        <button id="frame-forward-btn" class="control-btn small" title="Next Frame (→)">⏭</button>
+                        <button id="frame-back-btn" class="control-btn small" title="Back 5s (←)">⏪</button>
+                        <button id="frame-forward-btn" class="control-btn small" title="Forward 5s (→)">⏩</button>
                         <span class="time-display">
                             <span id="current-time">00:00:00.000</span>
                             <span class="time-separator">/</span>
